--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body {
 }
 
 /* Tablet view */
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 320px) {
 
   .main {
     width: 100%;
