--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body {
 
 }
 
-/* Tablet view */
+/* Mobile view */
 @media only screen and (min-width: 320px) {
 
   .main {
@@ -41,7 +41,8 @@ h1{
     border: 1px solid gray;
     border-radius: 25px;
     padding: 8px 22px;
-    margin-left: 15px;
+    margin-left: 10px;
+    text-aling:center;
   }
 
   .image {
