--- a/contactstyle.css
+++ b/contactstyle.css
@@ -108,7 +108,7 @@ border:0px solid red;
 
 
 }
-.btn-say{
+.about .btn-say{
   text-decoration:none;
   border:1px solid #ffffff;
   padding:5px 12px;
