--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ height: 100%;
     line-height: 32px;
   }
 
-  .footer {
+/*   .footer {
 
   border: 0px solid red;
     margin-top: 120px;
@@ -225,4 +225,4 @@ height: 100%;
 text-align: right;
 
   }
-}
+} */
