--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ h1{
   .main {
     width: 100%;
     height: 100%;
-    background: #fb4438;
+    background-color: #fb4438;
 
   }
   .main  .container {
