--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h1{
   .main {
     width: 100%;
     height: 100%;
-      background-color: #20212D;
+      background-color: #fc4438;
     
   }
   .main  .container {
