--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h1{
   .main {
     width: 100%;
     height: 100%;
-      background-color: #d37429;
+      background-color: #141b3d;
     
   }
   .main  .container {
