--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h1{
   .main {
     width: 100%;
     height: 100%;
-      background-color: #141b3d;
+      background-color: #0000000;
     
   }
   .main  .container {
@@ -139,7 +139,7 @@ h1{
   }
 
   #header .logo h1 {
-    color: white;
+    color: #1413db;
     text-aling:Left;
 
   }
