--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ height: 100%;
 
 
   .home-about .home-about-content h3 {
-    color: white;
+    color: #f1f1f1;
     font-family: 700;
     padding-left: 250px;
     padding-right: 250px;
