--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h1{
   .main {
     width: 100%;
     height: 100%;
-      background-color: #ffffff;
+      background-color: #221E22;
     
   }
   .main  .container {
@@ -139,7 +139,7 @@ h1{
   }
 
   #header .logo h1 {
-    color: #6C1665;
+    color: #fafafa;
     text-aling:Left;
 
   }
@@ -175,12 +175,12 @@ height: 100%;
     margin-top: 32px;
   }
   .home-about .home-about-content h1 {
-    color: #6C1665;
+    color: #fafafa;
     margin: 0px;
 
   }
   .home-about .home-about-content p {
-    color: #6C1665;
+    color: #fafafa;
     opacity: 70%;
     font-size: 22px;
 
@@ -190,7 +190,7 @@ height: 100%;
   .home-about .home-about-content i {
     margin-top: 24px;
     font-size: 24px;
-    color: #100D47;
+    color: #fafafa;
     padding-left: 12px;
     text-align: center;
   }
@@ -198,7 +198,7 @@ height: 100%;
 
 
   .home-about .home-about-content h3 {
-    color: #f1f1f1;
+    color: #fafafa;
     font-family: 700;
     padding-left: 250px;
     padding-right: 250px;
