--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h1{
   .main {
     width: 100%;
     height: 100%;
-      background-color: #221E22;
+      background-color: #812c6f;
     
   }
   .main  .container {
@@ -139,8 +139,9 @@ h1{
   }
 
   #header .logo h1 {
-    color: #fafafa;
+    color: #ffffff;
     text-aling:Left;
+    opacity:100%;
 
   }
 
@@ -175,12 +176,12 @@ height: 100%;
     margin-top: 32px;
   }
   .home-about .home-about-content h1 {
-    color: #fafafa;
+    color: #ffffff;
     margin: 0px;
 
   }
   .home-about .home-about-content p {
-    color: #fafafa;
+    color: #ffffff;
     opacity: 70%;
     font-size: 22px;
 
@@ -198,7 +199,7 @@ height: 100%;
 
 
   .home-about .home-about-content h3 {
-    color: #fafafa;
+    color: #ffffff;
     font-family: 700;
     padding-left: 250px;
     padding-right: 250px;
