--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h1{
   .main {
     width: 100%;
     height: 100%;
-      background-color: #812c6f;
+      background-color: #ffffff;
     
   }
   .main  .container {
@@ -139,7 +139,7 @@ h1{
   }
 
   #header .logo h1 {
-    color: #ffffff;
+    color: #282E3F;
     text-aling:Left;
     opacity:100%;
 
@@ -176,12 +176,12 @@ height: 100%;
     margin-top: 32px;
   }
   .home-about .home-about-content h1 {
-    color: #ffffff;
+    color: #282E3F;
     margin: 0px;
 
   }
   .home-about .home-about-content p {
-    color: #ffffff;
+    color: #282E3F;
     opacity: 70%;
     font-size: 22px;
 
@@ -191,7 +191,7 @@ height: 100%;
   .home-about .home-about-content i {
     margin-top: 24px;
     font-size: 24px;
-    color: #fafafa;
+    color: #282E3F;
     padding-left: 12px;
     text-align: center;
   }
@@ -199,7 +199,7 @@ height: 100%;
 
 
   .home-about .home-about-content h3 {
-    color: #ffffff;
+    color: #282E3F;
     font-family: 700;
     padding-left: 250px;
     padding-right: 250px;
