--- a/style.css
+++ b/style.css
@@ -120,25 +120,26 @@ h1{
 
 
   }
-  #header{
+/*   #header{
     margin-top: 30px;
   }
 
-  #header {
+/*   #header {
     border: 0px solid red;
     height: 80px;
 
   }
 
 
-  #header .logo{
+  #header  */
+  .logo{ 
 
-   
-    margin-top: 0px;
+    margin-top: 20px;
 
   }
 
-  #header .logo h1 {
+/*   #header*/
+  .logo h1 { 
     color: #282E3F;
     text-aling:Left;
     opacity:100%;
@@ -175,15 +176,15 @@ height: 100%;
     /* padding-top: 20px; */
     margin-top: 32px;
   }
-  .home-about .home-about-content h1 {
+  .home-about .home-about-content h2 {
     color: #282E3F;
     margin: 0px;
 
   }
-  .home-about .home-about-content p {
+  .home-about .home-about-content h4 {
     color: #282E3F;
-    opacity: 90%;
-    font-size: 22px;
+    opacity: 70%;
+/*     font-size: 22px; */
 
   }
   
